# BinaryBrain

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  BinaryNet.h  BinaryNetBatch.h  Lut6ModelAvx2.h  Lut6NetAvx2.h  Lut6NetBatchAvx2.h  Lut6NetBatchAvx2Bit.h  Lut6NetBatchAvx2Byte.h  LutModel.h  LutNet.h  LutNetBatch.h  NeuralNet.h  NeuralNetAffine.h  NeuralNetBinarize.h  NeuralNetBinaryLut.h  NeuralNetBinaryLut6.h  NeuralNetBinaryLutN.h  NeuralNetBuffer.h  NeuralNetBufferAccessor.h  NeuralNetBufferAccessorBinary.h  NeuralNetBufferAccessorReal.h  NeuralNetLayer.h  NeuralNetRealBinaryConverter.h  NeuralNetSigmoid.h  NeuralNetSoftmax.h  NeuralNetType.h  NeuralNetUnbinarize.h  README  README.md  README_en.md  ShuffleSet.h  license.txt  lut_classifier.sln  lut_classifier.vcxproj  lut_classifier.vcxproj.filters  main.cpp  mnist_read.cpp  (+2 more)
cuda/: AccuracyCategoricalClassification.cu  Adam.cu  AverageLut.cu  BatchNormalization.cu  Binarize.cu  BinaryLut6.cu  BinaryToReal.cu  BitEncode.cu  BitError.cu  Col2Im.cu  Col2Im2.cu  Common.cuh  ConvBitToReal.cu  DepthwiseDenseAffine.cu  DifferentiableLut.cu  FrameBufferCopy.cu  HardTanh.cu  HorizontalMeanVar.cu  HorizontalSum.cu  Im2Col.cu  LocalHeap.cu  LossMeanSquaredError.cu  LossSoftmaxCrossEntropy.cu  Makefile  Manager.cu  MatrixColwiseMeanVar.cu  MatrixColwiseSum.cu  MatrixRowwiseSetVector.cu  MaxLut.cu  MaxPooling.cu  MetricsCategoricalAccuracy.cu  MicroMlp.cu  MicroMlp6x16.cu  OptimizerAdam.cu  (+25 more)
samples/verilog/mnist/tb_mnist_lut_simple/verilator/: CMakeLists.txt  tb_verilator.cpp  tb_verilator.sv  verilator_cmd.txt
(+1112 files in other folders)
